<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Question #1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:text="@string/question1"
                style="@style/questionsTextStyle"
                />

            <RadioGroup
                android:id="@+id/q1RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/question1OptionARadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1OptionA"
                    />

                <RadioButton
                    android:id="@+id/question1OptionBRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1OptionB"
                    />

                <RadioButton
                    android:id="@+id/question1OptionCRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1OptionC"
                    />

                <RadioButton
                    android:id="@+id/question1OptionDRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1OptionD"
                    />

                <RadioButton
                    android:id="@+id/question1OptionERadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1OptionE"
                    />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>

        <!-- Question #2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/question2"
                style="@style/questionsTextStyle"
                />

            <RadioGroup
                android:id="@+id/q2RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/question2OptionARadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2OptionA"
                    />

                <RadioButton
                    android:id="@+id/question2OptionBRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2OptionB"
                    />

                <RadioButton
                    android:id="@+id/question2OptionCRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2OptionC"
                    />

                <RadioButton
                    android:id="@+id/question2OptionDRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2OptionD"
                    />

                <RadioButton
                    android:id="@+id/question2OptionERadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2OptionE"
                    />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>

        <!-- Question #3 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:text="@string/question3"
                style="@style/questionsTextStyle"
                />

            <RadioGroup
                android:id="@+id/q3RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/question3OptionARadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3OptionA"
                    />

                <RadioButton
                    android:id="@+id/question3OptionBRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3OptionB"
                    />

                <RadioButton
                    android:id="@+id/question3OptionCRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3OptionC"
                    />

                <RadioButton
                    android:id="@+id/question3OptionDRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3OptionD"
                    />

                <RadioButton
                    android:id="@+id/question3OptionERadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3OptionE"
                    />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>

        <!-- Question #4 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/question4"
                style="@style/questionsTextStyle"
                />

            <RadioGroup
                android:id="@+id/q4RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/question4OptionARadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4OptionA"
                    />

                <RadioButton
                    android:id="@+id/question4OptionBRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4OptionB"
                    />

                <RadioButton
                    android:id="@+id/question4OptionCRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4OptionC"
                    />

                <RadioButton
                    android:id="@+id/question4OptionDRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4OptionD"
                    />

                <RadioButton
                    android:id="@+id/question4OptionERadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4OptionE"
                    />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>

        <!-- Question #5 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/question5"
                style="@style/questionsTextStyle"
                />

            <RadioGroup
                android:id="@+id/q5RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/question5OptionARadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5OptionA"
                    />

                <RadioButton
                    android:id="@+id/question5OptionBRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5OptionB"
                    />

                <RadioButton
                    android:id="@+id/question5OptionCRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5OptionC"
                    />

                <RadioButton
                    android:id="@+id/question5OptionDRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5OptionD"
                    />

                <RadioButton
                    android:id="@+id/question5OptionERadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5OptionE"
                    />


            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:text="@string/reset"
                android:layout_marginLeft="8dp"
                android:onClick="reset"
                style="@style/buttonStyle"
                />

            <Button
                android:layout_weight="2"
                android:text="@string/submit"
                android:onClick="submit"
                android:layout_marginRight="8dp"
                style="@style/buttonStyle"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>